# chess

./: README.md  pyproject.toml
src/: config.py  main.py
src/engine/: board.py  chess.py  fen.py  move.py  piece.py
tests/engine/: test_board.py  test_fen.py  test_move.py  test_piece.py
