[project]
name = "chess"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ryan Hardy", email = "ryyHardy@gmail.com" }]
dependencies = ["flet[all]==0.27.6"]

[tool.flet]
# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "chess"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
 "pyinstaller>=6.13.0",
 "pytest>=8.3.5",
]
